# django_users

./: .bandit  .coverage  .coveragerc  .gitignore  MANIFEST.in  README.md  manage.py  mem_db  pytest.ini  pyvenv.cfg  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
django_users/: apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
django_users.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_users/templates/django_users/: base.html  profile.html  register.html  registration_confirmation_sent.html  resend_form.html
django_users/templates/registration/: confirm.html  login.html  password_change_form.html  password_reset_complete.html  password_reset_done.html
django_users/testapp/: requirements_test.txt  settings.py  urls.py
django_users/tests/: conftest.py  settings.py
django_users/tests/djangouserstestapp/: apps.py  settings.py
django_users/tests/functional_tests/features/: conftest.py
django_users/tests/functional_tests/features/login/: login.feature
django_users/tests/functional_tests/features/login/steps/: test_login.py
django_users/tests/functional_tests/features/password_reset/: password_reset.feature
django_users/tests/functional_tests/features/register/: register.feature
django_users/tests/testapp/: settings.py
django_users/tests/unit_tests/: test_forms.py  test_models.py  test_views.py
django_users_test_project/: asgi.py  settings.py  urls.py  wsgi.py
tests/functional_tests/feature_tests/: conftest.py  test_login.py
tests/functional_tests/features/: login.feature
(+3 files in other folders)
